Add more colors to consider

--- a/src/material-ui-colors.scss
+++ b/src/material-ui-colors.scss
@@ -14,7 +14,6 @@ $material-color-brown-700: #5d4037;
 $material-color-brown-800: #4e342e;
 $material-color-brown-900: #3e2723;
 
-
 $material-color-deep-orange: #ff5722;
 $material-color-deep-orange-100: #ffccbc;
 $material-color-deep-orange-200: #ffab91;
@@ -22,6 +21,9 @@ $material-color-deep-orange-300: #ff8a65;
 $material-color-deep-orange-700: #e64a19;
 $material-color-deep-orange-800: #d84315;
 $material-color-deep-orange-900: #bf360c;
+$material-color-deep-orange-a100: #ff9e80;
+$material-color-deep-orange-a200: #ff6e40;
+$material-color-deep-orange-a400: #ff3d00;
 
 $material-color-green-700: #388e3c;
 $material-color-green-800: #2e7d32;
