--- a/src/shared/_material-ui-colors.scss
+++ b/src/shared/_material-ui-colors.scss
@@ -11,6 +11,8 @@ $material-color-blue-800: #1565c0;
 $material-color-blue-900: #0d47a1;
 $material-color-blue: #2196f3;
 
+$material-color-light-blue-a400: #00b0ff;
+
 $material-color-brown: #795548;
 $material-color-brown-400: #8d6e63;
 $material-color-brown-500: $material-color-brown;
@@ -30,6 +32,9 @@ $material-color-deep-orange-a100: #ff9e80;
 $material-color-deep-orange-a200: #ff6e40;
 $material-color-deep-orange-a900: #c02400;
 $hsl-material-color-deep-orange-a900: hsl(11, 100%, 38%);
+
+// $material-color-green-200: #a5d6a7;
+$material-color-green-300: #81c784;
 
 $material-color-green-700: #388e3c;
 $material-color-green-800: #2e7d32;
