--- a/src/plugin-stylings/dataview.scss
+++ b/src/plugin-stylings/dataview.scss
@@ -5,7 +5,7 @@
   // border: 2px solid var(--material-color-deep-orange);
   border: 2px solid shared.$borderColor;
   border-right-width: 1em;
-  background-image: var(--dark-blue-grad);
+  background-image: #{shared.$dark-blue-grad};
   border-radius: 0.5em 0.5em;
   padding-left: 0.1em;
 }
