remove custom fountain stylings and depend more on fountain editor instead.

--- a/src/plugin-stylings/index.scss
+++ b/src/plugin-stylings/index.scss
@@ -3,7 +3,7 @@
 @forward "./breadcrumbs.scss";
 
 @forward "./dataview.scss";
-@forward "./fountain.scss";
+// @forward "./fountain.scss";
 @forward "./novel-word-count.scss";
 @forward "./file-explorer-note-count.scss";
 
