--- a/src/plugin-stylings/index.scss
+++ b/src/plugin-stylings/index.scss
@@ -4,7 +4,7 @@
 
 @forward "./dataview.scss";
 // @forward "./fountain.scss";
-@forward "./novel-word-count.scss";
-@forward "./file-explorer-note-count.scss";
+// @forward "./novel-word-count.scss";
+// @forward "./file-explorer-note-count.scss";
 
 @forward "./slides.scss";
