--- a/src/shared/_extendme.scss
+++ b/src/shared/_extendme.scss
@@ -5,5 +5,5 @@
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: 100% 100%;
-  background-blend-mode: overlay;
+  // background-blend-mode: overlay;
 }
