--- a/src/left-split-views.scss/file-explorer.scss
+++ b/src/left-split-views.scss/file-explorer.scss
@@ -10,29 +10,36 @@
 
   // background-blend-mode: color;
   // contain: paint;
+
+  /* NAV FILE EXPLORER BACKDROP */
+  .tree-item.nav-folder {
+    background: rgba(0, 0, 0, 0.6);
+    color: shared.$embedBorderColor;
+  }
 }
 
-/* NAV FILE EXPLORER BACKDROP */
-.nav-files-container .tree-item.nav-folder {
-  background: rgba(0, 0, 0, 0.6);
-  color: shared.$embedBorderColor;
-}
-
-// .workspace-split.mod-horizontal.mod-right-split .workspace-tabs > .workspace-tab-header-container >
-// .workspace-tab-header-container-inner .workspace-tab-header-inner-icon > svg.svg-icon {
-
-//   stroke-width: 3px;
-//   color: var(--material-color-orange-900);
-// }
 /* fix for missing nw icons when app refocuses on icon clicks */
-.workspace-tabs.mod-top.mod-top-left-space
-  .workspace-tab-header-container-inner
-  .workspace-tab-header
-  .workspace-tab-header-inner
-  .workspace-tab-header-inner-icon
-  > svg.svg-icon {
-  stroke-width: 3px;
-  color: shared.$material-color-orange-500;
+.workspace-tabs.mod-top.mod-top-left-space {
+  .workspace-tab-header-container-inner {
+    // every child below is now an icon.
+    .workspace-tab-header {
+      // 👆 is every child element;
+      .workspace-tab-header-inner {
+        .workspace-tab-header-inner-icon > svg.svg-icon {
+          stroke-width: 3px;
+          color: shared.$material-color-orange-500;
+        }
+      }
+      @for $i from 1 through length(shared.$colorsMap) {
+        &:nth-child(#{$i}) {
+          .workspace-tab-header-inner-icon > svg.svg-icon {
+            color: shared.getRandomColor(shared.$colorsMap);
+            @debug "Color: #{shared.getRandomColor(shared.$colorsMap)}";
+          }
+        }
+      }
+    }
+  }
 }
 
 // .workspace-tabs.mod-top.mod-top-left-space .workspace-tab-header-container-inner .workspace-tab-header .workspace-tab-header-inner .workspace-tab-header-inner-icon:hover > svg.svg-icon {
@@ -59,6 +66,8 @@
   color: shared.$material-color-red-a200;
 }
 
-.workspace .nav-files-container .nav-folder:has(.nav-folder-title[data-path^="_"]) {
+.workspace
+  .nav-files-container
+  .nav-folder:has(.nav-folder-title[data-path^="_"]) {
   display: none !important;
 }
