--- a/src/plugin-stylings/file-explorer-note-count.scss
+++ b/src/plugin-stylings/file-explorer-note-count.scss
@@ -14,27 +14,14 @@ $num-colors: 100;
   font-weight: bold; /* Make text bolder */
 }
 
-$colorsMap: (
-  red: shared.$material-color-amber-a400,
-  green: shared.$material-color-light-green-a400,
-  blue: shared.$material-color-light-blue-a400,
-  purple: shared.$material-color-deep-purple-200,
-  orange: shared.$material-color-orange-a400,
-  yellow: shared.$material-color-amber-50,
-  pink: shared.$material-color-pink-a100,
-  teal: shared.$material-color-teal-a400,
-  cyan: shared.$material-color-cyan-a400,
-  lime: shared.$material-color-lime-a400,
-  brown: shared.$material-color-brown-a400,
-);
 @function getRandomColor() {
   // $note_color: color.adjust($note_color, $lightness: 10%, $saturation: 30%);
-  $random_color_index: random(length($colorsMap));
+  $random_color_index: random(length(shared.$colorsMap));
 
-  @each $key, $value in $colorsMap {
-    $index: index($colorsMap, $key $value);
+  @each $key, $value in shared.$colorsMap {
+    $index: index(shared.$colorsMap, $key $value);
     @if $index == $random_color_index {
-      $note_color: map-get($colorsMap, $key);
+      $note_color: map-get(shared.$colorsMap, $key);
       @return $note_color;
     }
   }
